--- a/assets/base.css
+++ b/assets/base.css
@@ -1154,7 +1154,7 @@ a:hover {
   border-radius: 0 4px 4px 0;
   text-align: center;
   width: 173px;
-  padding-top: 25px;
+  padding-top: 20px;
 }
 .order-list .item .bar .row {
   margin-bottom: 12px;
@@ -1241,6 +1241,32 @@ a:hover {
   line-height: 20px;
   margin-left: 10px;
   vertical-align: top;
+}
+.figure-list .item {
+  display: flex;
+  margin-bottom: 12px;
+}
+.figure-list .img {
+  width: 120px;
+  margin-right: 16px;
+}
+.figure-list .img img {
+  max-width: 100%;
+}
+.figure-list .title {
+  font-size: 18px;
+}
+.figure-list .wrapper .sub {
+  margin-top: 5px;
+  color: #868686;
+}
+.message-list .item {
+  padding: 18px 20px 16px;
+  border-bottom: 1px solid #DDDDDD;
+}
+.message-list .item .sub {
+  margin-top: 5px;
+  color: #999;
 }
 .footer {
   background: #5B5B5B;
