--- a/assets/base.less
+++ b/assets/base.less
@@ -1232,7 +1232,7 @@ a{
 			border-radius: 0 4px 4px 0;
 			text-align: center;
 			width: 173px;
-			padding-top: 25px;
+			padding-top: 20px;
 			.row{
 				margin-bottom: 12px;
 			}
@@ -1320,6 +1320,40 @@ a{
 				margin-left: 10px;
 				vertical-align: top;
 			}
+		}
+	}
+}
+
+.figure-list{
+	.item{
+		display: flex;
+		margin-bottom: 12px;
+	}
+	.img{
+		width: 120px;
+		margin-right: 16px;
+		img{
+			max-width: 100%;
+		}
+	}
+	.title{
+		font-size: 18px;
+	}
+	.wrapper{
+		.sub{
+			margin-top: 5px;
+			color: #868686;
+		}
+	}
+}
+
+.message-list{
+	.item{
+		padding: 18px 20px 16px;
+		border-bottom: 1px solid #DDDDDD;
+		.sub{
+			margin-top: 5px;
+			color: #999;
 		}
 	}
 }
