--- a/assets/base.css
+++ b/assets/base.css
@@ -85,6 +85,10 @@ a:hover {
   color: #FFFFFF;
   text-decoration: none;
 }
+.header .nav li.active {
+  background: rgba(0, 0, 0, 0.5);
+  color: #FFFFFF;
+}
 .header .bar {
   right: 0;
   position: absolute;
