--- a/assets/base.less
+++ b/assets/base.less
@@ -89,6 +89,10 @@ a{
 					text-decoration: none;
 				}
 			}
+			&.active{
+				background: rgba(0, 0, 0, 0.5);
+				color: #FFFFFF;
+			}
 		}
 	}
 	.bar{
