--- a/assets/base.less
+++ b/assets/base.less
@@ -1450,6 +1450,7 @@ a.img:hover img{
 .page-other{
 	width: 900px;
 	margin: 0 auto;
+	padding-top: 50px;
 	.page-other-title{
 		font-weight: bold;
 		font-size: 24px;
