--- a/assets/base.less
+++ b/assets/base.less
@@ -159,17 +159,12 @@ a.img:hover img{
 
 	
 }
-.banner{
+.page-banner{
 	margin-top: -50px;
+	background-repeat: no-repeat;
+	background-position: center center;
 	.static{
 		height: 240px;
-		position: relative;
-		overflow: hidden;
-		img{
-			position: absolute;
-			left: 50%;
-			transform: translateX(-50%);
-		}
 	}
 }
 .page-conainter{
