--- a/assets/base.css
+++ b/assets/base.css
@@ -322,54 +322,6 @@ a.img:hover img {
 .base-card-list .item:nth-child(4) {
   margin-right: 0;
 }
-.base-card-list.span-3 .tag {
-  background: #999999;
-  padding: 4px 18px;
-  border-radius: 4px 0 4px 0;
-  font-weight: bold;
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #fff;
-}
-.base-card-list.span-3 .tag.active {
-  background: linear-gradient(180deg, #FF881A 0%, #F36A1C 100%);
-  padding: 4px 18px;
-  border-radius: 4px 0 4px 0;
-  font-weight: bold;
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #fff;
-}
-.base-card-list.span-3 .item {
-  height: 400px;
-  width: 380px;
-  margin-bottom: 20px;
-}
-.base-card-list.span-3 .item:nth-child(3) {
-  margin-right: 0;
-}
-.base-card-list.span-3 .item:nth-child(4) {
-  margin-right: 20px;
-}
-.base-card-list.span-3 .item .img {
-  height: 240px;
-}
-.base-card-list.span-3 .item .img img {
-  line-height: 240px;
-}
-.base-card-list.span-3 .item .title {
-  max-height: 54px;
-  line-height: 27px;
-  overflow: hidden;
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-.base-card-list.span-3 .item .sub {
-  font-size: 16px;
-  line-height: 27px;
-}
 .base-card-list-large .item {
   height: 400px;
   width: 380px;
@@ -379,6 +331,7 @@ a.img:hover img {
   background-color: #fff;
   border-radius: 8px;
   transition: 0.4s box-shadow;
+  position: relative;
 }
 .base-card-list-large .item .tag {
   background: #999999;
@@ -389,6 +342,7 @@ a.img:hover img {
   left: 0;
   top: 0;
   color: #fff;
+  z-index: 1;
 }
 .base-card-list-large .item .tag.active {
   background: linear-gradient(180deg, #FF881A 0%, #F36A1C 100%);
@@ -413,7 +367,6 @@ a.img:hover img {
 .base-card-list-large .item .img {
   display: block;
   height: 240px;
-  position: relative;
   text-align: center;
 }
 .base-card-list-large .item .img img {
