--- a/assets/base.css
+++ b/assets/base.css
@@ -627,6 +627,7 @@ a.img:hover img {
   font-size: 16px;
   border-bottom: 1px solid #C4C4C4;
   vertical-align: middle;
+  margin-bottom: 23px;
 }
 .user-md .user-title::before {
   margin-right: 8px;
@@ -1388,6 +1389,36 @@ a.img:hover img {
 }
 .page-other .contact .left .text {
   margin-bottom: 45px;
+}
+.order-detail {
+  padding-bottom: 40px;
+}
+.order-detail .rows {
+  display: flex;
+}
+.order-detail .rows .wrapper {
+  flex: 1;
+  display: block;
+}
+.order-detail .rows .wrapper .title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.order-detail .rows .wrapper .flex {
+  display: flex;
+}
+.order-detail .rows .wrapper .row {
+  flex: 1;
+}
+.order-detail .rows .img {
+  width: 160px;
+}
+.order-detail .rows .img img {
+  max-width: 100%;
+  border-radius: 6px;
+}
+.order-detail .row {
+  color: #666666;
 }
 .footer {
   background: #5B5B5B;
