--- a/assets/base.css
+++ b/assets/base.css
@@ -58,6 +58,182 @@ a.img:hover img {
 .editor p {
   margin-bottom: 20px;
 }
+/* margin padding 小间距 */
+.ml5 {
+  margin-left: 5px;
+}
+.mr5 {
+  margin-right: 5px;
+}
+.mb5 {
+  margin-bottom: 5px;
+}
+.mt5 {
+  margin-top: 5px;
+}
+.pl5 {
+  padding-left: 5px;
+}
+.pr5 {
+  padding-right: 5px;
+}
+.pb5 {
+  padding-bottom: 5px;
+}
+.pt5 {
+  padding-top: 5px;
+}
+.ml10 {
+  margin-left: 10px;
+}
+.mr10 {
+  margin-right: 10px;
+}
+.mb10 {
+  margin-bottom: 10px;
+}
+.mt10 {
+  margin-top: 10px;
+}
+.pl10 {
+  padding-left: 10px;
+}
+.pr10 {
+  padding-right: 10px;
+}
+.pb10 {
+  padding-bottom: 10px;
+}
+.pt10 {
+  padding-top: 10px;
+}
+.ml15 {
+  margin-left: 15px;
+}
+.mr15 {
+  margin-right: 15px;
+}
+.mb15 {
+  margin-bottom: 15px;
+}
+.mt15 {
+  margin-top: 15px;
+}
+.pl15 {
+  padding-left: 15px;
+}
+.pr15 {
+  padding-right: 15px;
+}
+.pb15 {
+  padding-bottom: 15px;
+}
+.pt15 {
+  padding-top: 15px;
+}
+.ml20 {
+  margin-left: 20px;
+}
+.mr20 {
+  margin-right: 20px;
+}
+.mb20 {
+  margin-bottom: 20px;
+}
+.mt20 {
+  margin-top: 20px;
+}
+.pl20 {
+  padding-left: 20px;
+}
+.pr20 {
+  padding-right: 20px;
+}
+.pb20 {
+  padding-bottom: 20px;
+}
+.pt20 {
+  padding-top: 20px;
+}
+.ml25 {
+  margin-left: 25px;
+}
+.mr25 {
+  margin-right: 25px;
+}
+.mb25 {
+  margin-bottom: 25px;
+}
+.mt25 {
+  margin-top: 25px;
+}
+.pl25 {
+  padding-left: 25px;
+}
+.pr25 {
+  padding-right: 25px;
+}
+.pb25 {
+  padding-bottom: 25px;
+}
+.pt25 {
+  padding-top: 25px;
+}
+.ml30 {
+  margin-left: 30px;
+}
+.mr30 {
+  margin-right: 30px;
+}
+.mb30 {
+  margin-bottom: 30px;
+}
+.mt30 {
+  margin-top: 30px;
+}
+.pl30 {
+  padding-left: 30px;
+}
+.pr30 {
+  padding-right: 30px;
+}
+.pb30 {
+  padding-bottom: 30px;
+}
+.pt30 {
+  padding-top: 30px;
+}
+/*宽度*/
+.w50px {
+  width: 50px;
+}
+.w100px {
+  width: 100px;
+}
+.w150px {
+  width: 150px;
+}
+.w200px {
+  width: 200px;
+}
+.w250px {
+  width: 250px;
+}
+.w300px {
+  width: 300px;
+}
+.w350px {
+  width: 350px;
+}
+.w400px {
+  width: 400px;
+}
+.w450px {
+  width: 450px;
+}
+.w500px {
+  width: 500px;
+}
 .header {
   min-height: 50px;
   background: rgba(0, 0, 0, 0.5);
@@ -147,13 +323,59 @@ a.img:hover img {
 .header .bar .item-search .search-box input:focus {
   outline: none;
 }
-.page-banner {
+.banner-carousel {
+  width: 100%;
+  position: relative;
+  height: 540px;
   margin-top: -50px;
+}
+.banner-carousel .item {
+  height: 540px;
   background-repeat: no-repeat;
   background-position: center center;
 }
+.banner-carousel .swiper-pagination .swiper-pagination-bullet {
+  margin: 0 3px;
+  width: 30px;
+  height: 6px;
+  border-radius: 1px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+  opacity: 1;
+}
+.banner-carousel .swiper-pagination .swiper-pagination-bullet-active {
+  background: #fff;
+}
+.home-swiper {
+  position: relative;
+}
+.home-swiper .icon-arrow-swiper-left,
+.home-swiper .icon-arrow-swiper-right {
+  position: absolute;
+  top: 75px;
+  z-index: 2;
+}
+.home-swiper .icon-arrow-swiper-left:focus,
+.home-swiper .icon-arrow-swiper-right:focus {
+  outline: 0;
+}
+.home-swiper .icon-arrow-swiper-left {
+  left: -36px;
+}
+.home-swiper .icon-arrow-swiper-right {
+  right: -36px;
+}
+.page-list-loading {
+  position: relative;
+  min-height: 200px;
+}
+.page-banner {
+  margin-top: -50px;
+}
 .page-banner .static {
   height: 240px;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 .page-conainter {
   width: 1180px;
@@ -266,24 +488,53 @@ a.img:hover img {
   height: 39px;
   font-size: 0;
   text-indent: 10000px;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-news {
-  background: url('../assets/font-news.svg') no-repeat center center;
+  background: url('../assets/font-news.svg');
 }
 .font-title-activity {
-  background: url('../assets/font-activity.svg') no-repeat center center;
+  background: url('../assets/font-activity.svg');
 }
 .font-title-works {
-  background: url('../assets/font-works.svg') no-repeat center center;
+  background: url('../assets/font-works.svg');
 }
 .font-title-team {
-  background: url('../assets/font-team.svg') no-repeat center center;
+  background: url('../assets/font-team.svg');
 }
 .font-title-brand {
-  background: url('../assets/font-brand.svg') no-repeat center center;
+  background: url('../assets/font-brand.svg');
 }
 .font-title-server {
-  background: url('../assets/font-server.svg') no-repeat center center;
+  background: url('../assets/font-server.svg');
+}
+.font-title-brand-index-1 {
+  background: url('../assets/font-brand-index-1.svg');
+}
+.font-title-brand-index-2 {
+  background: url('../assets/font-brand-index-2.svg');
+}
+.font-title-brand-index-3 {
+  background: url('../assets/font-brand-index-3.svg');
+}
+.font-title-map {
+  background: url('../assets/font-map.svg');
+}
+.font-title-artist {
+  background: url('../assets/font-artist.svg');
+}
+.font-title-volunteer-activity {
+  background: url('../assets/font-volunteer-activity.svg');
+}
+.font-title-volunteer-mien {
+  background: url('../assets/font-volunteer-mien.svg');
+}
+.font-title-star-team {
+  background: url('../assets/font-star-team.svg');
+}
+.font-title-train {
+  background: url('../assets/font-train.svg');
 }
 .base-card-list .item {
   width: 280px;
@@ -546,6 +797,16 @@ a.img:hover img {
   background-color: #158A7E;
   margin-bottom: 0;
 }
+.breadcrumb {
+  color: #333333;
+  padding: 40px 0 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.breadcrumb .icon {
+  margin: 0 8px;
+}
 .img-avatar {
   width: 80px;
   height: 80px;
@@ -627,7 +888,7 @@ a.img:hover img {
   font-size: 16px;
   border-bottom: 1px solid #C4C4C4;
   vertical-align: middle;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 .user-md .user-title::before {
   margin-right: 8px;
@@ -637,6 +898,20 @@ a.img:hover img {
   background-color: #F36A1C;
   display: inline-block;
   vertical-align: middle;
+}
+.form-submit-tips {
+  border-radius: 6px;
+  padding: 7px 23px;
+  line-height: 1.6;
+  display: inline-block;
+}
+.form-submit-tips.fail {
+  color: #FB1818;
+  background: #FFE2E2;
+}
+.form-submit-tips.success {
+  color: #2DB553;
+  background: #D8F7E0;
 }
 .login-md {
   width: 900px;
@@ -1363,7 +1638,7 @@ a.img:hover img {
   height: 5px;
   background-color: #C4C4C4;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 10px;
   vertical-align: middle;
 }
 .page-other .contact {
@@ -1390,35 +1665,223 @@ a.img:hover img {
 .page-other .contact .left .text {
   margin-bottom: 45px;
 }
-.order-detail {
-  padding-bottom: 40px;
+.page-pager {
+  text-align: center;
+  margin-top: 20px;
 }
-.order-detail .rows {
+.brand-index .flex {
   display: flex;
+  margin: 0 auto;
 }
-.order-detail .rows .wrapper {
-  flex: 1;
+.brand-index .flex .item {
+  text-align: center;
+  height: 396px;
+  overflow: hidden;
+  width: 393px;
+}
+.brand-index .flex .item a {
   display: block;
+  position: relative;
 }
-.order-detail .rows .wrapper .title {
+.brand-index .flex .item img {
+  display: block;
+  flex: 1;
+  width: 100%;
+  transition: 0.4s opacity;
+}
+.brand-index .flex .item img:hover {
+  opacity: 0.85;
+}
+.brand-index .flex .item .fixed-1 {
+  position: absolute;
+  left: 23px;
+  top: 22px;
+  z-index: 2;
+}
+.brand-index .flex .item .fixed-2 {
+  position: absolute;
+  bottom: 22px;
+  right: 23px;
+  transform: rotate(180deg);
+  z-index: 2;
+}
+.brand-index .flex .item .font-title {
+  position: absolute;
+  top: 192px;
+  left: 101px;
+  z-index: 2;
+  width: 182px;
+  height: 51px;
+}
+.brand-list .item {
+  margin-right: 20px;
+  margin-bottom: 30px;
+  width: 380px;
+  height: 310px;
+  float: left;
+  border-radius: 8px;
+}
+.brand-list .item a {
+  display: block;
+  border-radius: 8px;
+  height: 310px;
+  position: relative;
+}
+.brand-list .item a img {
+  width: 100%;
+  line-height: 310px;
+  max-height: 310px;
+  border-radius: 8px;
+}
+.brand-list .item a .shadow {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.35);
+  border-radius: 8px;
+}
+.brand-list .item a:hover .shadow {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.brand-list .item a .title {
+  position: absolute;
+  left: 80px;
+  right: 80px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
   font-weight: bold;
-  margin-bottom: 10px;
+  font-size: 24px;
+  z-index: 2;
 }
-.order-detail .rows .wrapper .flex {
+.brand-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.service-map-index {
   display: flex;
 }
-.order-detail .rows .wrapper .row {
+.service-map-index .service-map {
+  height: 500px;
+  width: 308px;
+  background: #AFA48E;
+  padding-bottom: 15px;
+}
+.service-map-index .service-map .title {
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.4);
+}
+.service-map-index .service-map .list .item {
+  margin-top: 5px;
+}
+.service-map-index .service-map .list a {
+  min-height: 70px;
+  color: #fff;
+  display: flex;
+  padding: 4px 20px 4px 16px;
+  transition: 0.4s background-color;
+}
+.service-map-index .service-map .list a:hover {
+  background: rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+}
+.service-map-index .service-map .list a .img {
+  width: 80px;
+}
+.service-map-index .service-map .list a .img img {
+  width: 80px;
+  display: block;
+  font-size: 0;
+}
+.service-map-index .service-map .list a .wrapper {
   flex: 1;
+  padding-left: 12px;
 }
-.order-detail .rows .img {
-  width: 160px;
+.service-map-index .service-map .list a .wrapper .name {
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 4px;
 }
-.order-detail .rows .img img {
-  max-width: 100%;
+.service-map-index .service-map .list a .wrapper .sub {
+  height: 36px;
+  line-height: 18px;
+  overflow: hidden;
+  font-size: 12px;
+}
+.service-map-index .service-map .more {
+  margin-top: 6px;
+  text-align: center;
+}
+.service-map-index .service-map .more a {
+  display: inline-block;
+  border: 1px solid #f5f5f5;
+  box-sizing: border-box;
+  border-radius: 20px;
+  width: 140px;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+}
+.service-map-index .map-show {
+  width: 680px;
+  height: 500px;
+  position: relative;
+}
+.service-map-index .map-show .temp {
+  width: 680px;
+  height: 500px;
+}
+.service-map-index .map-show .layer {
+  width: 216px;
+  display: flex;
+}
+.service-map-index .map-show .layer a {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
+  display: flex;
+  width: 100%;
+  padding: 9px;
 }
-.order-detail .row {
+.service-map-index .map-show .layer a:hover {
+  text-decoration: none;
+  box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.5);
+}
+.service-map-index .map-show .layer a .img {
+  width: 60px;
+}
+.service-map-index .map-show .layer a .img img {
+  width: 60px;
+  display: block;
+  font-size: 0;
+}
+.service-map-index .map-show .layer a .wrapper {
+  flex: 1;
+  padding-left: 9px;
+}
+.service-map-index .map-show .layer a .wrapper .name {
+  font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 4px;
   color: #666666;
+}
+.service-map-index .map-show .layer a .wrapper .sub {
+  color: #999999;
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .footer {
   background: #5B5B5B;
