--- a/assets/base.less
+++ b/assets/base.less
@@ -66,6 +66,50 @@ a.img:hover img{
 @primaryColor: #158A7E;
 @subPrimaryColor: #F36A1C;
 
+/* margin padding 小间距 */
+.wrap(@n, @i: 1) when (@i =< @n) {
+    @counter: @i * 5;
+    @size: @counter * 1px;
+    .ml@{counter} {
+        margin-left: @size;
+    }
+    .mr@{counter} {
+        margin-right: @size;
+    }
+    .mb@{counter} {
+        margin-bottom: @size;
+    }
+    .mt@{counter} {
+        margin-top: @size;
+    }
+    .pl@{counter} {
+        padding-left: @size;
+    }
+    .pr@{counter} {
+        padding-right: @size;
+    }
+    .pb@{counter} {
+        padding-bottom: @size;
+    }
+    .pt@{counter} {
+        padding-top: @size;
+    }
+    .wrap(@n, (@i + 1));
+}
+.wrap(6);
+
+/*宽度*/
+.getwidth(@wn, @wi: 1) when (@wi =< @wn) {
+    @wcounter: @wi * 50;
+    @wsize: @wcounter * 1px;
+    .w@{wcounter}px {
+        width: @wsize
+    }
+    .getwidth(@wn, (@wi + 1));
+}
+.getwidth(10);
+
+
 .header{
 	min-height: 50px;
 	background: rgba(0, 0, 0, 0.5);
@@ -156,15 +200,62 @@ a.img:hover img{
 			}
 		}
 	}
+}
+.banner-carousel{
+	width: 100%;
+	position: relative;
+	height: 540px;
+	margin-top: -50px;
+	.item{
+		height: 540px;
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+	.swiper-pagination{
+		.swiper-pagination-bullet{
+			margin:  0 3px;
+			width: 30px;
+			height: 6px;
+			border-radius: 1px;
+			background: rgba(255, 255, 255, 0.5);
+			border-radius: 3px;
+			opacity: 1;
+		}
+		.swiper-pagination-bullet-active{
+			background: #fff;
+		}
+	}
+}
 
-	
+.home-swiper{
+	position: relative;
+	.icon-arrow-swiper-left,.icon-arrow-swiper-right{
+		position: absolute;
+		top: 75px;
+		z-index: 2;
+		&:focus{
+			outline: 0;
+		}
+	}
+	.icon-arrow-swiper-left{
+		left: -36px;
+	}
+	.icon-arrow-swiper-right{
+		right: -36px
+	}
+}
+
+
+.page-list-loading{
+	position: relative;
+	min-height: 200px;
 }
 .page-banner{
 	margin-top: -50px;
-	background-repeat: no-repeat;
-	background-position: center center;
 	.static{
 		height: 240px;
+		background-repeat: no-repeat;
+		background-position: center center;
 	}
 }
 .page-conainter{
@@ -283,23 +374,52 @@ a.img:hover img{
 	height: 39px;
 	font-size: 0;
 	text-indent: 10000px;
+	background-position: center center;
+	background-repeat: no-repeat;
 	&-news{
-		background: url('@{images}/font-news.svg') no-repeat center center;
+		background: url('@{images}/font-news.svg');
 	}
 	&-activity{
-		background: url('@{images}/font-activity.svg') no-repeat center center;
+		background: url('@{images}/font-activity.svg');
 	}
 	&-works{
-		background: url('@{images}/font-works.svg') no-repeat center center;
+		background: url('@{images}/font-works.svg');
 	}
 	&-team{
-		background: url('@{images}/font-team.svg') no-repeat center center;
+		background: url('@{images}/font-team.svg');
 	}
 	&-brand{
-		background: url('@{images}/font-brand.svg') no-repeat center center;
+		background: url('@{images}/font-brand.svg');
 	}
 	&-server{
-		background: url('@{images}/font-server.svg') no-repeat center center;
+		background: url('@{images}/font-server.svg');
+	}
+	&-brand-index-1{
+		background: url('@{images}/font-brand-index-1.svg');
+	}
+	&-brand-index-2{
+		background: url('@{images}/font-brand-index-2.svg');
+	}
+	&-brand-index-3{
+		background: url('@{images}/font-brand-index-3.svg');
+	}
+	&-map{
+		background: url('@{images}/font-map.svg');
+	}
+	&-artist{
+		background: url('@{images}/font-artist.svg');
+	}
+	&-volunteer-activity{
+		background: url('@{images}/font-volunteer-activity.svg');
+	}
+	&-volunteer-mien{
+		background: url('@{images}/font-volunteer-mien.svg');
+	}
+	&-star-team{
+		background: url('@{images}/font-star-team.svg');
+	}
+	&-train{
+		background: url('@{images}/font-train.svg');
 	}
 }
 
@@ -590,6 +710,14 @@ a.img:hover img{
 	}
 }
 
+.breadcrumb{
+	color: #333333;
+	padding: 40px 0 30px;
+	.icon{
+		margin: 0 8px;
+	}
+	.text-ellipsis()
+}
 
 .img-avatar{
 	width: 80px;
@@ -675,7 +803,7 @@ a.img:hover img{
 		font-size: 16px;
 		border-bottom: 1px solid #C4C4C4;
 		vertical-align: middle;
-		margin-bottom: 23px;
+		margin-bottom: 24px;
 		&::before{
 			margin-right: 8px;
 			width: 4px;
@@ -685,6 +813,20 @@ a.img:hover img{
 			display: inline-block;
 			vertical-align: middle;
 		}
+	}
+}
+.form-submit-tips{
+	border-radius: 6px;
+	padding: 7px 23px;
+	line-height: 1.6;
+	display: inline-block;
+	&.fail{
+		color: #FB1818;
+		background: #FFE2E2;
+	}
+	&.success{
+		color: #2DB553;
+		background: #D8F7E0;
 	}
 }
 
@@ -1454,7 +1596,7 @@ a.img:hover img{
 				height: 5px;
 				background-color: #C4C4C4;
 				border-radius: 50%;
-				margin-right: 5px;
+				margin-right: 10px;
 				vertical-align: middle;
 			}
 		}
@@ -1485,34 +1627,227 @@ a.img:hover img{
 	}
 }
 
-.order-detail{
-	padding-bottom: 40px;
-	.rows{
+.page-pager{
+	text-align: center;
+	margin-top: 20px;
+}
+
+.brand-index{
+	.flex{
 		display: flex;
-		.wrapper{
-			flex: 1;
-			display: block;
-			.title{
-				font-weight: bold;
-				margin-bottom: 10px;
+		margin: 0 auto;
+		.item{
+			text-align: center;
+			height: 396px;
+			overflow: hidden;
+			width: 393px;
+			a{
+				display: block;
+				position: relative;
 			}
-			.flex{
-				display: flex;
-			}
-			.row{
-				flex: 1;
-			}
-		}
-		.img{
-			width: 160px;
 			img{
-				max-width: 100%;
-				border-radius: 6px;
+				display: block;
+				flex: 1;
+				width: 100%;
+				transition: .4s opacity;
+				&:hover{
+					opacity: .85;
+				}
+			}
+			.fixed-1{
+				position: absolute;
+				left: 23px;
+				top: 22px;
+				z-index: 2;
+			}
+			.fixed-2{
+				position: absolute;
+				bottom: 22px;
+				right: 23px;
+				transform: rotate(180deg);
+				z-index: 2;
+			}
+			.font-title{
+				position: absolute;
+				top: 192px;
+				left: 101px;
+				z-index: 2;
+				width: 182px;
+				height: 51px;
 			}
 		}
 	}
-	.row{
-		color: #666666;
+}
+.brand-list{
+	.item{
+		margin-right: 20px;
+		margin-bottom: 30px;
+		width: 380px;
+		height: 310px;
+		float: left;
+		border-radius: 8px;
+		a{
+			display: block;
+			border-radius: 8px;
+			height: 310px;
+			img{
+				width: 100%;
+				line-height: 310px;
+				max-height: 310px;
+				border-radius: 8px;
+			}
+			position: relative;
+			.shadow{
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 0;
+				z-index: 1;
+				position: absolute;
+				background-color: rgba(0, 0, 0, 0.35);
+				border-radius: 8px;
+			}
+			&:hover{
+				.shadow{
+					background-color: rgba(0, 0, 0, 0.2);
+				}
+			}
+			.title{
+				position: absolute;
+				left: 80px;
+				right: 80px;
+				top: 50%;
+				transform: translateY(-50%);
+				color: #fff;
+				font-weight: bold;
+				font-size: 24px;
+				z-index: 2;
+			}
+		}
+		&:nth-child(3n) {
+			margin-right: 0;
+		}
+	}
+}
+.service-map-index{
+	display: flex;
+	.service-map{
+		height: 500px;
+		width: 308px;
+		background: #AFA48E;
+		padding-bottom: 15px;
+		.title{
+			height: 50px;
+			line-height: 50px;
+			text-align: center;
+			font-weight: bold;
+			font-size: 18px;
+			color: #fff;
+			background: rgba(0, 0, 0, 0.4);
+		}
+		.list{
+			.item{
+				margin-top: 5px;
+			}
+			a{
+				min-height: 70px;
+				color: #fff;
+				display: flex;
+				padding: 4px 20px 4px 16px;
+				transition: .4s background-color;
+				&:hover{
+					background: rgba(0, 0, 0, 0.1);
+					text-decoration: none;
+				}
+				.img{
+					width: 80px;
+					img{
+						width: 80px;
+						display: block;
+						font-size: 0;
+					}
+				}
+				.wrapper{
+					flex: 1;
+					padding-left: 12px;
+					
+					.name{
+						font-weight: bold;
+						.text-ellipsis();
+						margin-bottom: 4px;
+					}
+					.sub{
+						height: 36px;
+						line-height: 18px;
+						overflow: hidden;
+						font-size: 12px;
+					}
+				}
+			}
+		}
+		.more{
+			margin-top: 6px;
+			text-align: center;
+			a{
+				display: inline-block;
+				border: 1px solid #f5f5f5;
+				box-sizing: border-box;
+				border-radius: 20px;
+				width: 140px;
+				color: #fff;
+				text-align: center;
+				padding: 5px 0;
+			}
+		}
+	}
+	.map-show{
+		width: 680px;
+		height: 500px;
+		position: relative;
+		.temp{
+			width: 680px;
+			height: 500px;
+		}
+		.layer{
+			width: 216px;
+			display: flex;
+			a{
+				background: #FFFFFF;
+				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+				border-radius: 6px;
+				display: flex;
+				width: 100%;
+				padding:9px;
+				&:hover{
+					text-decoration: none;
+					box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.5);
+				}
+				.img{
+					width: 60px;
+					img{
+						width: 60px;
+						display: block;
+						font-size: 0;
+					}
+				}
+				.wrapper{
+					flex: 1;
+					padding-left: 9px;
+					
+					.name{
+						font-weight: bold;
+						.text-ellipsis();
+						margin-bottom: 4px;
+						color: #666666;
+					}
+					.sub{
+						color: #999999;
+						font-size: 12px;
+						.text-ellipsis()
+					}
+				}
+			}
+		}
 	}
 }
 
