--- a/assets/icon.less
+++ b/assets/icon.less
@@ -1,3 +1,8 @@
+.size12() {
+	width: 12px;
+	height: 12px;
+	background-size: 12px 12px;
+}
 .size20() {
 	width: 20px;
 	height: 20px;
@@ -13,9 +18,13 @@
 	height: 40px;
 	background-size: 40px 40px;
 }
+.size50{
+	width: 50px;
+	height: 50px;
+	background-size: 50px 50px;
+}
 @iconImages: "../assets/icon";
 @iconImages: "./icon";
-
 .icon{
 	display: inline-block;
 	vertical-align: middle;
@@ -50,6 +59,12 @@
 	}
 	&-decorate{
 		background: url('@{iconImages}/icon-decorate.svg');
+		width: 39px;
+		height: 34px;
+		background-size: contain;
+	}
+	&-decorate-brand{
+		background: url('@{iconImages}/icon-decorate-brand.svg');
 		width: 39px;
 		height: 34px;
 		background-size: contain;
@@ -110,6 +125,23 @@
 	&-link{
 		background: url('@{iconImages}/icon-link.svg');
 		.size40()
+	}
+
+	&-arrow-swiper-left,&-arrow-swiper-right{
+		background: url('@{iconImages}/icon-arrow-swiper.svg');
+		.size50();
+		cursor: pointer;
+		&.disabled{
+			opacity: .8;
+			cursor: default;
+		}
+	}
+	&-arrow-swiper-right{
+		transform: rotate(180deg);
+	}
+	&-arrow-right{
+		background: url('@{iconImages}/icon-arrow-right.svg');
+		.size12();
 	}
 }
 
