--- a/assets/base.css
+++ b/assets/base.css
@@ -203,6 +203,54 @@ a.img:hover img {
 .pt30 {
   padding-top: 30px;
 }
+.ml35 {
+  margin-left: 35px;
+}
+.mr35 {
+  margin-right: 35px;
+}
+.mb35 {
+  margin-bottom: 35px;
+}
+.mt35 {
+  margin-top: 35px;
+}
+.pl35 {
+  padding-left: 35px;
+}
+.pr35 {
+  padding-right: 35px;
+}
+.pb35 {
+  padding-bottom: 35px;
+}
+.pt35 {
+  padding-top: 35px;
+}
+.ml40 {
+  margin-left: 40px;
+}
+.mr40 {
+  margin-right: 40px;
+}
+.mb40 {
+  margin-bottom: 40px;
+}
+.mt40 {
+  margin-top: 40px;
+}
+.pl40 {
+  padding-left: 40px;
+}
+.pr40 {
+  padding-right: 40px;
+}
+.pb40 {
+  padding-bottom: 40px;
+}
+.pt40 {
+  padding-top: 40px;
+}
 /*宽度*/
 .w50px {
   width: 50px;
@@ -382,22 +430,15 @@ a.img:hover img {
   margin: 0 auto;
 }
 .page-conainter-inner {
-  margin-top: -65px;
   position: relative;
+  margin: 0 auto;
+  margin-top: -65px;
+  width: 900px;
+  background: #FFFFFF;
+  border-radius: 8px;
 }
 .page-body {
   padding-bottom: 50px;
-}
-.home-md .home-title {
-  width: 304px;
-  height: 39px;
-  background: url('../assets/home-decorate-title.png') no-repeat center center;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 24px;
-}
-.home-md .home-title .font-title {
-  margin: 0 auto;
 }
 .home-md .home-row {
   margin-top: 50px;
@@ -483,58 +524,101 @@ a.img:hover img {
 .home-md .home-guide-md .list li a:hover {
   box-shadow: 1px 1px 5px #158A7E;
 }
+.home-title {
+  width: 304px;
+  height: 39px;
+  background: url('../assets/home-decorate-title.png') no-repeat center center;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.home-title .font-title {
+  margin: 0 auto;
+}
 .font-title {
   width: 128px;
   height: 39px;
   font-size: 0;
   text-indent: 10000px;
+}
+.font-title .bg {
   background-position: center center;
   background-repeat: no-repeat;
 }
 .font-title-news {
   background: url('../assets/font-news.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-activity {
   background: url('../assets/font-activity.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-works {
   background: url('../assets/font-works.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-team {
   background: url('../assets/font-team.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-brand {
   background: url('../assets/font-brand.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-server {
   background: url('../assets/font-server.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-brand-index-1 {
   background: url('../assets/font-brand-index-1.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-brand-index-2 {
   background: url('../assets/font-brand-index-2.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-brand-index-3 {
   background: url('../assets/font-brand-index-3.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-map {
   background: url('../assets/font-map.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-artist {
   background: url('../assets/font-artist.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-volunteer-activity {
   background: url('../assets/font-volunteer-activity.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-volunteer-mien {
   background: url('../assets/font-volunteer-mien.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-star-team {
   background: url('../assets/font-star-team.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .font-title-train {
   background: url('../assets/font-train.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .base-card-list .item {
   width: 280px;
@@ -812,6 +896,9 @@ a.img:hover img {
   height: 80px;
   border-radius: 40px;
 }
+.user-md {
+  margin-top: -65px;
+}
 .user-md .user-menu {
   background: #FFFFFF;
   border-radius: 8px;
@@ -914,16 +1001,30 @@ a.img:hover img {
   background: #D8F7E0;
 }
 .login-md {
-  width: 900px;
   height: 422px;
-  margin: 0 auto;
-  background: #FFFFFF;
-  border-radius: 8px;
   display: flex;
 }
 .login-md .left {
   padding: 35px 50px;
   flex: 1;
+}
+.login-md .left .code {
+  display: block;
+  font-size: 0;
+  width: 112px;
+  height: 36px;
+}
+.login-md .left .text-right {
+  text-align: right;
+}
+.login-md .left .tips {
+  color: #999;
+}
+.login-md .left .tips a {
+  color: #999;
+}
+.login-md .left .tabs {
+  margin-bottom: 20px;
 }
 .login-md .left .tabs a {
   color: #158A7E;
@@ -932,6 +1033,14 @@ a.img:hover img {
 .login-md .left .tabs .active {
   font-weight: bold;
   font-size: 18px;
+  cursor: default;
+}
+.login-md .left .tabs .active:hover {
+  text-decoration: none;
+}
+.login-md .qrcode {
+  padding-top: 20px;
+  text-align: center;
 }
 .login-md .right {
   width: 530px;
@@ -1665,6 +1774,61 @@ a.img:hover img {
 .page-other .contact .left .text {
   margin-bottom: 45px;
 }
+.register-md {
+  padding: 40px 0;
+}
+.register-md .title {
+  text-align: center;
+  color: #999;
+}
+.register-md .title .inner {
+  font-weight: bold;
+  font-size: 24px;
+}
+.register-md .title .sub {
+  font-size: 12px;
+}
+.register-md .wrapper {
+  padding-top: 30px;
+  width: 350px;
+  margin: 0 auto;
+}
+.global-opt-tips {
+  width: 900px;
+  padding: 40px 0;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 8px;
+  text-align: center;
+}
+.global-opt-tips .icon {
+  margin: 40px 0 30px;
+}
+.global-opt-tips .wrapper {
+  margin: 0 auto;
+  width: 600px;
+  text-align: center;
+}
+.global-opt-tips .wrapper .top {
+  font-weight: bold;
+  font-size: 18px;
+  width: 230px;
+  margin: 0 auto;
+  padding-bottom: 40px;
+}
+.global-opt-tips .wrapper .top-success {
+  color: #2DB553;
+}
+.global-opt-tips .wrapper .top-fail {
+  color: #FB1818;
+}
+.global-opt-tips .wrapper .bottom {
+  padding-top: 30px;
+  border-top: 1px solid #DDDDDD;
+}
+.global-opt-tips .wrapper .bottom button {
+  margin: 0 20px;
+}
 .page-pager {
   text-align: center;
   margin-top: 20px;
@@ -1765,7 +1929,7 @@ a.img:hover img {
 }
 .service-map-index .service-map {
   height: 500px;
-  width: 308px;
+  width: 310px;
   background: #AFA48E;
   padding-bottom: 15px;
 }
@@ -1785,7 +1949,7 @@ a.img:hover img {
   min-height: 70px;
   color: #fff;
   display: flex;
-  padding: 4px 20px 4px 16px;
+  padding: 6px 20px 6px 16px;
   transition: 0.4s background-color;
 }
 .service-map-index .service-map .list a:hover {
@@ -1832,12 +1996,12 @@ a.img:hover img {
   padding: 5px 0;
 }
 .service-map-index .map-show {
-  width: 680px;
+  width: 870px;
   height: 500px;
   position: relative;
 }
 .service-map-index .map-show .temp {
-  width: 680px;
+  width: 870px;
   height: 500px;
 }
 .service-map-index .map-show .layer {
@@ -1882,6 +2046,64 @@ a.img:hover img {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.heritage-show .box .right .item {
+  width: 280px;
+  overflow: hidden;
+}
+.heritage-show .box .right .item a {
+  display: block;
+  height: 215px;
+  position: relative;
+  color: #fff;
+}
+.heritage-show .box .right .item a .shadow {
+  background-color: rgba(5, 5, 5, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 0;
+  opacity: 0;
+  transition: 0.3s opacity;
+}
+.heritage-show .box .right .item a:hover .shadow {
+  opacity: 1;
+}
+.heritage-show .box .right .item a:hover .text {
+  display: block;
+}
+.heritage-show .box .right .item a .text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 42px;
+  right: 42px;
+  display: none;
+  text-align: center;
+}
+.heritage-show .box .right .item a .text .title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.heritage-show .box .right .item img {
+  width: 100%;
+  line-height: 215px;
+}
+.heritage-show .more {
+  display: block;
+  margin: 0 auto;
+  border: 1px solid #999999;
+  box-sizing: border-box;
+  border-radius: 20px;
+  height: 40px;
+  line-height: 38px;
+  width: 200px;
+  font-size: 16px;
+  color: #999;
+  text-align: center;
 }
 .footer {
   background: #5B5B5B;
