--- a/assets/icon.less
+++ b/assets/icon.less
@@ -18,13 +18,17 @@
 	height: 40px;
 	background-size: 40px 40px;
 }
+.size48{
+	width: 48px;
+	height: 48px;
+	background-size: 48px 48px;
+}
 .size50{
 	width: 50px;
 	height: 50px;
 	background-size: 50px 50px;
 }
 @iconImages: "../assets/icon";
-@iconImages: "./icon";
 .icon{
 	display: inline-block;
 	vertical-align: middle;
@@ -142,6 +146,15 @@
 	&-arrow-right{
 		background: url('@{iconImages}/icon-arrow-right.svg');
 		.size12();
+	}
+
+	&-success{
+		background: url('@{iconImages}/icon-success.svg');
+		.size48();
+	}
+	&-fail{
+		background: url('@{iconImages}/icon-fail.svg');
+		.size48();
 	}
 }
 
