--- a/assets/base.less
+++ b/assets/base.less
@@ -56,6 +56,17 @@ a.img:hover img{
 	opacity: .9;
 }
 
+.box-img{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	img{
+		max-height: 100%;
+		max-width: 100%;
+	}
+}
+
 .editor{
 	p{
 		margin-bottom: 20px;
@@ -124,7 +135,7 @@ a.img:hover img{
 			
 		}
 	}
-	.page-conainter{
+	.page-container{
 		min-height: 50px;
 		position: relative;
 		z-index: 2;
@@ -258,11 +269,11 @@ a.img:hover img{
 		background-position: center center;
 	}
 }
-.page-conainter{
+.page-container{
 	width: 1180px;
 	margin: 0 auto;
 }
-.page-conainter-inner{
+.page-container-inner{
 	position: relative;
 	margin: 0 auto;
 	margin-top: -65px;
@@ -448,7 +459,8 @@ a.img:hover img{
 .base-card-list{
 	.item{
 		width: 280px;
-		float: left;
+		display: inline-flex;
+    	flex-wrap: wrap;
 		margin-right: 20px;
 		background-color: #fff;
 		border-radius: 8px;
@@ -462,15 +474,11 @@ a.img:hover img{
 			overflow: hidden;
 		}
 		.img{
-			display: block;
+			.box-img();
 			height: 210px;
 			position: relative;
 			img{
 				border-radius: 8px 8px 0px 0px;
-				font-size: 0;
-				max-width: 100%;
-				max-height: 100%;
-				line-height: 210px;
 			}
 		}
 		.sub{
@@ -487,10 +495,10 @@ a.img:hover img{
 }
 
 .base-card-list-large{
+	display: inline-flex;
+    flex-wrap: wrap;
 	.item{
-		height: 400px;
 		width: 380px;
-		float: left;
 		margin-right: 20px;
 		margin-bottom: 20px;
 		background-color: #fff;
@@ -507,6 +515,7 @@ a.img:hover img{
 			top: 0;
 			color: #fff;
 			z-index: 1;
+			line-height: 1.6;
 		}
 		.tag.active{
 			background: linear-gradient(180deg, #FF881A 0%, #F36A1C 100%);
@@ -522,22 +531,18 @@ a.img:hover img{
 			padding: 12px 16px 28px;
 		}
 		.title{
-			max-height: 54px;
-			line-height: 27px;
-			overflow: hidden;
+			line-height: 25px;
 			font-size: 18px;
 			margin-bottom: 10px;
 		}
 		.img{
-			display: block;
+			.box-img();
 			height: 240px;
-			text-align: center;
 			img{
 				border-radius: 8px 8px 0px 0px;
-				font-size: 0;
-				max-width: 100%;
-				height: 240px;
-				line-height: 240px;
+			}
+			&.height285{
+				height: 285px;
 			}
 		}
 		.sub{
@@ -634,9 +639,8 @@ a.img:hover img{
 		}
 		.img{
 			height: 120px;
+			.box-img();
 			img{
-				max-width: 100%;
-				height: 120px;
 				border-radius: 8px;
 			}
 		}
@@ -1951,74 +1955,170 @@ a.img:hover img{
 	}
 }
 
-
-.heritage-show{
-	.box{
-		.right{
-			.item{
-				width: 280px;
-				overflow: hidden;
-				a{
-					display: block;
+.heritage-md{
+	.heritage-show{
+		.box{
+			display: flex;
+			.left{
+				width: 575px;
+				height: 450px;
+				background-color: #000;
+			}
+			.right{
+				width: 1180px - 575;
+				margin-left: 1px;
+				.item{
+					margin: 0 0 20px 22px;
+					width: 280px;
 					height: 215px;
-					position: relative;
-					color: #fff;
-					.shadow{
-						background-color: rgba(5, 5, 5, 0.5);
-						position: absolute;
-						left: 0;
-						right: 0;
-						top: 0;
-						bottom: 0;
-						z-index: 0;
-						opacity: 0;
-						transition: .3s opacity;
-					}
-					&:hover{
+					float: left;
+					overflow: hidden;
+					a{
+						display: block;
+						height: 215px;
+						position: relative;
+						color: #fff;
 						.shadow{
-							opacity: 1;
+							background-color: rgba(5, 5, 5, 0.5);
+							position: absolute;
+							left: 0;
+							right: 0;
+							top: 0;
+							bottom: 0;
+							z-index: 0;
+							opacity: 0;
+							transition: .3s opacity;
+						}
+						&:hover{
+							.shadow{
+								opacity: 1;
+							}
+							.text{
+								display: block;
+							}
 						}
 						.text{
-							display: block;
+							position: absolute;
+							top: 50%;
+							transform: translateY(-50%);
+							left: 42px;
+							right: 42px;
+							display: none;
+							text-align: center;
+							.title{
+								font-weight: bold;
+								font-size: 18px;
+								margin-bottom: 5px;
+							}
 						}
+						
 					}
-					.text{
-						position: absolute;
-						top: 50%;
-						transform: translateY(-50%);
-						left: 42px;
-						right: 42px;
-						display: none;
-						text-align: center;
-						.title{
-							font-weight: bold;
-							font-size: 18px;
-							margin-bottom: 5px;
-						}
+					img{
+						width: 100%;
+						line-height: 215px;
 					}
-					
-				}
-				img{
-					width: 100%;
-					line-height: 215px;
 				}
 			}
 		}
+		.more{
+			display: block;
+			margin: 10px auto;
+			border: 1px solid #999999;
+			box-sizing: border-box;
+			border-radius: 20px;
+			height: 40px;
+			line-height: 38px;
+			width: 200px;
+			font-size: 16px;
+			color: #999;
+			text-align: center;
+		}
 	}
-	.more{
-		display: block;
-		margin: 0 auto;
-		border: 1px solid #999999;
-		box-sizing: border-box;
-		border-radius: 20px;
-		height: 40px;
-		line-height: 38px;
-		width: 200px;
-		font-size: 16px;
-		color: #999;
-		text-align: center;
+	.heritage-md-header{
+		height: 450px;
+		background: #B5D7DB;
+		display: flex;
+		.left{
+			width: 390px;
+			padding: 36px 42px;
+			position: relative;
+			.text{
+				color: #333333;
+			}
+			.more{
+				border: 1px solid @primaryColor;
+				border-radius: 20px;
+				display: inline-block;
+				height: 40px;
+				line-height: 38px;
+				text-align: center;
+				color:@primaryColor;
+				font-size: 16px;
+				display: inline-block;
+				width: 140px;
+				position: absolute;
+				bottom: 40px;
+				left: 42px;
+			}
+		}
+		.right{
+			width: 1180px - 390;
+		}
+	}
+	.heritage-list{
+		.item{
+			display: flex;
+			background-color: #B5D7DB;
+			float: left;
+			width: 50%;
+			height: 300px;
+			padding-right: 10px;
+			&:nth-child(2n){
+				padding-left: 10px;
+				padding-right: 0;
+			}
+		}
+		.img{
+			width: 345px !important;
+			height: 300px;
+			display: flex;
+			.box-img();
+		}
+		.wrapper{
+			flex: 1;
+			position: relative;
+			padding: 54px 23px 30px;
+			color:#666666;
+			a{
+				color:#666666;
+			}
+			.fixed-1{
+				left: 12px;
+				top: 12px;
+				position: absolute;
+			}
+			.fixed-2{
+				right: 12px;
+				bottom: 12px;
+				position: absolute;
+				transform: rotate(180deg);
+			}
+			.title{
+				font-weight: bold;
+				font-size: 18px;
+				text-align: center;
+				margin-bottom: 11px;
+			}
+			.sub{
+				margin-bottom: 18px;
+			}
+			.more{
+				color:@primaryColor;
+			}
+		}
 	}
 }
+
 
 .footer{
 	background: #5B5B5B;
